# AdaptiveAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: audit.py  chat.py  evaluate.py  health.py  upload.py
backend/app/core/: auth.py  config.py  database.py  deps.py  threads.py
backend/app/graph/: builder.py
backend/app/graph/edges/: conditional.py
backend/app/graph/nodes/: approval_node.py  confidence_node.py  error_node.py  eval_node.py  evidence_node.py  planner_node.py  reasoning_node.py  refine_node.py  response_node.py  retrieval_node.py  risk_node.py  step_counter.py  tool_planner_node.py  tools_node.py  validator_node.py
backend/app/models/: schemas.py  state.py
backend/app/services/: llm.py
backend/app/services/approval/: approval.py
backend/app/services/audit/: audit.py
backend/app/services/confidence/: confidence.py
backend/app/services/eval/: __init__.py
backend/app/services/evidence/: evidence.py
backend/app/services/judge/: __init__.py
backend/app/services/memory/: memory.py  memory_worker.py
backend/app/services/planner/: planner.py
backend/app/services/reasoning/: reasoning.py
backend/app/services/retrieval/: hybrid_search.py
backend/app/services/retrieval/embeddings/: embedder.py  openai_embedder.py
backend/app/services/retrieval/reranker/: reranker.py  rest_reranker.py
backend/app/services/retrieval/vector_store/: base.py  chroma_store.py  factory.py  pgvector_store.py  pinecone_store.py  qdrant_store.py
backend/app/services/risk/: risk.py
backend/app/services/tools/: tool_registry.py
backend/app/services/validator/: validator.py
backend/tests/: test_approval.py  test_bm25.py  test_confidence.py  test_evidence.py  test_graph.py  test_risk.py  test_upgrades.py  test_validator.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/chat/: ApprovalCard.tsx  ChatInput.tsx  MessageBubble.tsx
frontend/src/components/dashboard/: SidePanel.tsx
frontend/src/lib/: api.ts
infra/: docker-compose.yml
infra/monitoring/: grafana_dashboard.json  prometheus.yml
scripts/: setup.ps1  setup.sh  verify.sh
