[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiveagent"
version = "0.1.0"
description = "AdaptiveAgent - A Secure, Explainable, and Trustworthy Agentic RAG Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.10",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.0",
    "rank-bm25>=0.2.2",
    "chromadb>=1.0.10",
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.2.11,<1.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.18",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.8.0",
    "httpx>=0.28.0",
    "langsmith>=0.3.0",
    "prometheus-client>=0.21.0",
    "sunglasses>=0.2.64",
    "litellm>=1.55.0",
    "langchain-litellm>=0.1.0",
    "psycopg_pool>=3.2.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3.0"]
anthropic = ["langchain-anthropic>=0.3.0"]
google = ["langchain-google-genai>=2.0.0"]
groq = ["langchain-groq>=0.2.0"]
pgvector = ["langchain-postgres>=0.1.0", "psycopg2-binary>=2.9.0"]
qdrant = ["langchain-qdrant>=0.1.0", "qdrant-client>=1.12.0"]
pinecone = ["langchain-pinecone>=0.1.0", "pinecone-client>=5.0.0"]
ragas = ["ragas>=0.2.0", "langchain-core>=0.3.0"]
eval = ["ragas>=0.2.0"]
all = ["adaptiveagent[openai,anthropic,google,groq,pgvector,qdrant,pinecone,ragas]"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
